test/org/midica/testfiles/failing/eff-flow-note-not-set-1.midica
INCLUDE inc/instruments.midica


0: poly_at.set(100%)
